retrieveUnpackaged/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>AHRC__c</fullName>
        <label>AHRC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>561</fullName>
                </value>
                <value>
                    <fullName>56A</fullName>
                </value>
                <value>
                    <fullName>56C</fullName>
                </value>
                <value>
                    <fullName>56D</fullName>
                </value>
                <value>
                    <fullName>56E</fullName>
                </value>
                <value>
                    <fullName>56F</fullName>
                </value>
                <value>
                    <fullName>56H</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <inlineHelpText>All Project Codes must contain 4 digits</inlineHelpText>
        <label>Project Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project_Code__c &amp; &quot; - &quot; &amp;  Project__c</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Task_Name__c</fullName>
        <formula>TEXT(Sub_Task_code__c) &amp; &quot; - &quot; &amp;  Sub_Task__c</formula>
        <label>Sub-Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Task__c</fullName>
        <label>Sub-Task</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Task_code__c</fullName>
        <label>Sub-Task Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <formula>Task_code__c &amp; &quot; - &quot; &amp;   Name</formula>
        <label>Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_code__c</fullName>
        <label>Task / Group Line Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AHRC__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Sub_Task_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TCD_Projects1</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Sub_Task_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AHRC__c</field>
            <operation>equals</operation>
            <value>56F,56F - TCD</value>
        </filters>
        <label>TCD Projects</label>
    </listViews>
    <nameField>
        <label>Task / Group Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Minimum_4_digits</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Project_Code__c) != 4</errorConditionFormula>
        <errorDisplayField>Project_Code__c</errorDisplayField>
        <errorMessage>All Project Codes must be 4 digits</errorMessage>
    </validationRules>
</CustomObject>